psc-demo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: psc-demo
  labels:
    name: psc-demo
    purpose: private-service-connect-demo
